--- a/views/deposit-new.ejs
+++ b/views/deposit-new.ejs
@@ -12,5 +12,5 @@
       <% }) %>
     </select>
   </div>
-  <button class="btn btn-success">Buat Invoice</button>
+  <button class="btn btn-success">Deposit</button>
 </form>
