--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,4 +1,9 @@
-<div class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" id="sidebarMenu">
+<div class="sidebar bg-light p-3" id="sidebarMenu">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h5>Menu</h5>
+    <button class="btn btn-sm btn-danger d-lg-none" id="closeSidebar">×</button>
+  </div>
+
   <div class="position-sticky pt-3">
     <ul class="nav flex-column">
       <% if (user.role === 'admin') { %>
@@ -13,7 +18,7 @@
           <div class="collapse" id="depositSub">
             <ul class="nav flex-column ms-3">
               <li class="nav-item"><a class="nav-link" href="/deposit/new">New Deposit</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Riwayat Deposit</a></li>
+              <li class="nav-item"><a class="nav-link" href="/deposit/history">Riwayat Deposit</a></li>
             </ul>
           </div>
         </li>
