--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,26 +7,35 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
   <link href="/css/style.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a2e0b1a5f0.js" crossorigin="anonymous"></script>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
 </head>
 <body>
+  <!-- Navbar -->
   <%- include('../partials/navbar') %>
-  <div class="container-fluid">
-    <div class="row">
-      <% if (user) { %>
-        <%- include('../partials/sidebar') %>
-      <% } %>
-      <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4">
-        <%- body %>
-      </main>
-    </div>
+
+  <!-- Layout Container -->
+  <div class="d-flex">
+    <% if (user) { %>
+      <%- include('../partials/sidebar') %>
+    <% } %>
+
+    <main class="flex-grow-1 p-3" id="mainContent">
+      <%- body %>
+    </main>
   </div>
 
+  <!-- Footer -->
   <footer class="text-center text-muted py-3">
     <small>Created by 4rc0d3</small>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
