--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,29 +1,27 @@
-<div class="sidebar bg-light p-3" id="sidebarMenu">
-  <div class="d-flex justify-content-between align-items-center mb-3">
-    <h5>Menu</h5>
-    <button class="btn btn-sm btn-danger d-lg-none" id="closeSidebar">×</button>
-  </div>
-
-  <div class="position-sticky pt-3">
+<aside class="sidebar bg-light border-end" id="sidebarMenu">
+  <div class="p-3">
+    <h5 class="text-center">Menu</h5>
     <ul class="nav flex-column">
       <% if (user.role === 'admin') { %>
-        <li class="nav-item"><a class="nav-link" href="/admin/dashboard">Dashboard</a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin/users">Kelola User</a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin/saldo-kirim">Kirim Saldo</a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin/metode">Metode Deposit</a></li>
+        <li class="nav-item"><a href="/admin/dashboard" class="nav-link"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
+        <li class="nav-item"><a href="/admin/users" class="nav-link"><i class="bi bi-people"></i> Kelola User</a></li>
+        <li class="nav-item"><a href="/admin/saldo-kirim" class="nav-link"><i class="bi bi-cash-stack"></i> Kirim Saldo</a></li>
+        <li class="nav-item"><a href="/admin/metode" class="nav-link"><i class="bi bi-gear"></i> Metode Deposit</a></li>
       <% } else { %>
-        <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
+        <li class="nav-item"><a href="/dashboard" class="nav-link"><i class="bi bi-house"></i> Dashboard</a></li>
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#depositSub">Deposit</a>
+          <a class="nav-link" data-bs-toggle="collapse" href="#depositSub" role="button">
+            <i class="bi bi-wallet2"></i> Deposit
+          </a>
           <div class="collapse" id="depositSub">
             <ul class="nav flex-column ms-3">
-              <li class="nav-item"><a class="nav-link" href="/deposit/new">New Deposit</a></li>
-              <li class="nav-item"><a class="nav-link" href="/deposit/history">Riwayat Deposit</a></li>
+              <li><a href="/deposit/new" class="nav-link">New Deposit</a></li>
+              <li><a href="/deposit/history" class="nav-link">Riwayat Deposit</a></li>
             </ul>
           </div>
         </li>
-        <li class="nav-item"><a class="nav-link" href="/withdraw">Withdraw</a></li>
+        <li class="nav-item"><a href="/withdraw" class="nav-link"><i class="bi bi-arrow-down-circle"></i> Withdraw</a></li>
       <% } %>
     </ul>
   </div>
-</div>
+</aside>
