--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -4,16 +4,14 @@
   <meta charset="UTF-8" />
   <title><%= title || 'Dashboard' %> | GoPay QR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <!-- Google Font -->
+
+  <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/themify-icons@0.1.2/css/themify-icons.css">
 
-  <!-- Bootstrap & Toastr CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- CSS Libs -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
-
-  <!-- FontAwesome -->
-  <script src="https://kit.fontawesome.com/a2e0b1a5f0.js" crossorigin="anonymous"></script>
 
   <!-- Custom CSS -->
   <link href="/css/style.css" rel="stylesheet" />
@@ -21,37 +19,38 @@
 <body>
 
   <% if (user) { %>
+    <!-- Navbar -->
     <%- include('../partials/navbar') %>
+
+    <!-- Sidebar + Main Content -->
     <div class="container-fluid">
       <div class="row">
+        <!-- Sidebar -->
         <%- include('../partials/sidebar') %>
+
+        <!-- Main Content -->
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4" id="mainContent">
           <%- body %>
         </main>
       </div>
     </div>
   <% } else { %>
+    <!-- Guest (login/register) content only -->
     <main class="container py-5" id="mainContent">
       <%- body %>
     </main>
   <% } %>
 
+  <!-- Footer -->
   <footer class="text-center text-muted py-3">
     <small>Created by 4rc0d3</small>
   </footer>
 
-  <!-- jQuery + Bootstrap -->
+  <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Toastr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-
-  <!-- Chart.js must be above script.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <!-- Custom JS -->
   <script src="/js/script.js"></script>
-
 </body>
 </html>
