--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,24 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
+
+    <!-- Sidebar Toggle (Mobile) -->
+    <button class="btn text-white me-3 d-md-none sidebar-toggle" id="toggleSidebar">
+      <i class="ti-menu"></i>
+    </button>
+
     <a class="navbar-brand" href="/">GoPay QR</a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarProfile">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <% if (user) { %>
-    <div class="collapse navbar-collapse" id="navbarProfile">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-            <i class="fas fa-user"></i> <%= user.username %>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="#">Pengaturan</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/logout">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
+      <div class="collapse navbar-collapse" id="navbarProfile">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+              <i class="ti-user"></i> <%= user.username %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="/settings"><i class="ti-settings me-1"></i> Pengaturan</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/logout"><i class="ti-power-off me-1"></i> Logout</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     <% } %>
   </div>
 </nav>
